# hoffman

./: .gitignore  .gitmodules  .travis.yml  COPYING  Makefile.am  Makefile.in  NALIMOV  PROBES-FAST  PROBES-FAST1  PROBES-FAST2  PROBES-FAST3  PROBES-SLOW  README  TODO  UBUNTU-PACKAGES  bitlib.h  bittest.c  configure.ac  egtb.cpp  ex1.c  extract-timings  formats.xml  ftp_fopen.c  ftp_fopen.h  futurebases.pl  genalltb  genalltb.bat  genctlfile.pl  gensuicide.pl  gzip.hpp  hoffman.c  hoffman.cc  hoffman.cc.allocator  hoffman.h  hoffman.html  hoffman.nsi  hoffman.txt  index.html  md5htb  pawngen  (+19 more)
References/: REC-xml-names  REC-xpath-19991116  WD-xptr  xinclude  xslt
cgi-bin/: README  hoffman.cgi  loaddb  verifydb
slides/: counting.xcf  fortress.xml  hoffman-1.odg  hoffman.odp  sanders.xcf  tpie.xcf
test/: Makefile.in  k.xml
xml/: carlsen_anand_2014.xml  fine67-0-3.xml  fine67-1-2.xml  fine67-1-3.xml  fine67-2-1.xml  fine67-2-2.xml  fine67-2-3.xml  fine67-3-0.xml  fine67-3-1.xml  fine67-3-2.xml  fine67-3-3.xml  fine67.xml  fine67a.xml  fine67b.xml  fine67c.xml  fine67n.xml  fine68.xml  fortress.xml  fortress1.xml  fortress2.xml  fortress3.xml  fortress4.xml  ivan1.xml  ivan10.xml  ivan11.xml  ivan12.xml  ivan13.xml  ivan14.xml  ivan4.xml  ivan5.xml  ivan6.xml  ivan7.xml  ivan9.xml  ivana.xml  ivanb.xml  ivanc.xml  ivand.xml  ivane.xml  ivanf.xml  kpk-23.xml  (+31 more)
